--- a/package.json
+++ b/package.json
@@ -1,20 +1,34 @@
 {
-  "name": "notewizdesktop",
+  "name": "notewiz",
   "version": "1.0.0",
-  "description": "",
+  "description": "NoteWiz is a free app for note taking. Easily create, organize, and save your notes. Access your ideas anytime, anywhere with NoteWiz, the solution for effective note management.",
   "main": "main.js",
   "scripts": {
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
     "dev": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Fabiiidev",
   "license": "ISC",
   "devDependencies": {
+    "@electron-forge/cli": "7.4.0",
+    "@electron-forge/maker-deb": "7.4.0",
+    "@electron-forge/maker-rpm": "7.4.0",
+    "@electron-forge/maker-squirrel": "7.4.0",
+    "@electron-forge/maker-zip": "7.4.0",
+    "@electron-forge/plugin-auto-unpack-natives": "7.4.0",
+    "@electron-forge/plugin-fuses": "7.4.0",
+    "@electron/fuses": "1.8.0",
     "electron": "32.0.1",
-    "standard": "^17.1.0"
+    "standard": "17.1.0"
   },
   "eslintConfig": {
     "extends": "standard"
+  },
+  "dependencies": {
+    "electron-squirrel-startup": "1.0.1"
   }
 }
